--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.2",
-    "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
+    "aws-sdk": "^2.973.0",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.1",
+    "mapbox": "*",
+    "mock-aws-s3": "^4.0.2",
+    "nock": "^13.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.3.5",
+    "selenium-webdriver": "*",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -43,5 +48,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.19",
+    "@types/react-router-dom": "^5.1.8",
+    "typescript": "^4.3.5"
   }
 }
