--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "checkjs": true,
+    "checkJs": true,
     "jsx": "react-jsx"
   },
   "include": [
