--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@mapbox/node-pre-gyp": "^1.0.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -16,10 +17,12 @@
     "bcrypt": "^5.0.1",
     "mapbox": "*",
     "mock-aws-s3": "^4.0.2",
+    "moment": "^2.29.1",
     "nock": "^13.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "selenium-webdriver": "*",
