--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "selenium-webdriver": "*",
+    "watchpack": "^2.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
