--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "aws-sdk": "^2.973.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "correios-brasil": "^2.2.2",
+    "cors": "^2.8.5",
     "mapbox": "*",
     "mock-aws-s3": "^4.0.2",
     "moment": "^2.29.1",
@@ -54,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/react": "^17.0.19",
     "@types/react-router-dom": "^5.1.8",
     "typescript": "^4.3.5"
